--- a/Tendr/package.json
+++ b/Tendr/package.json
@@ -12,12 +12,18 @@
   "dependencies": {
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "antd": "^3.10.3",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "babel-plugin-import": "^1.11.0",
+    "css-loader": "^1.0.1",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^0.23.1",
     "typescript": "^3.1.4",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
