--- a/Tendr/tsconfig.json
+++ b/Tendr/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "lib": [ "dom", "es2015" ],
         "outDir": "./dist/",
         "sourceMap": true,
         "noImplicitAny": true,
