--- a/Tendr/Tendr.csproj
+++ b/Tendr/Tendr.csproj
@@ -6,10 +6,29 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="node_src\**" />
+    <Compile Remove="wwwroot\assets\**" />
     <Compile Remove="wwwroot\dist\**" />
+    <Content Remove="node_src\**" />
+    <Content Remove="wwwroot\assets\**" />
     <Content Remove="wwwroot\dist\**" />
+    <EmbeddedResource Remove="node_src\**" />
+    <EmbeddedResource Remove="wwwroot\assets\**" />
     <EmbeddedResource Remove="wwwroot\dist\**" />
+    <None Remove="node_src\**" />
+    <None Remove="wwwroot\assets\**" />
     <None Remove="wwwroot\dist\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Remove="package-lock.json" />
+    <Content Remove="package.json" />
+    <Content Remove="tsconfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove=".babelrc" />
+    <None Remove="webpack.config.js" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +38,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
   </ItemGroup>
 
 </Project>
