--- a/Tendr/package.json
+++ b/Tendr/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/react": "^16.7.2",
     "@types/react-dom": "^16.0.9",
+    "@types/react-router": "^4.4.1",
     "@types/react-router-dom": "^4.3.1",
     "antd": "^3.10.5",
     "react": "^16.6.1",
