--- a/Tendr/.babelrc
+++ b/Tendr/.babelrc
@@ -1,5 +1,5 @@
 {
   "plugins": [
-    [ "import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" } ]
+    [ "import", { "libraryName": "antd", "libraryDirectory": "es", "style": "less" } ]
   ]
 }
