--- a/Tendr/package.json
+++ b/Tendr/package.json
@@ -27,6 +27,7 @@
     "less-loader": "^4.1.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
+    "ts-import-plugin": "^1.5.5",
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
