--- a/Tendr/tsconfig.json
+++ b/Tendr/tsconfig.json
@@ -4,7 +4,7 @@
         "outDir": "./assets/",
         "sourceMap": true,
         "noImplicitAny": true,
-        // "module": "commonjs",
+        "module": "ESNext",
         "target": "es5",
         "jsx": "react"
     },
