--- a/Idx/Idx.csproj
+++ b/Idx/Idx.csproj
@@ -7,9 +7,13 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0" />
+    <PackageReference Include="linq2db" Version="2.5.4" />
+    <PackageReference Include="linq2db.Identity" Version="2.0.1" />
+    <PackageReference Include="linq2db.PostgreSQL" Version="2.5.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
+    <PackageReference Include="Npgsql" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
