--- a/Tendr/Tendr.csproj
+++ b/Tendr/Tendr.csproj
@@ -44,6 +44,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
+    <PackageReference Include="Sentry" Version="1.0.1-beta3" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.0.1-beta3" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
