--- a/Idx/Idx.csproj
+++ b/Idx/Idx.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" PrivateAssets="All" />
     <PackageReference Include="Npgsql" Version="4.0.3" />
+    <PackageReference Include="Sentry" Version="1.0.1-beta3" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.0.1-beta3" />
   </ItemGroup>
 
 </Project>
