added simple logout

--- a/Idx/appsettings.json
+++ b/Idx/appsettings.json
@@ -1,11 +1,10 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Idx-6521C15D-E645-4061-ADDD-F20EFBD5CDA1;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
+	"Logging": {
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Warning",
+			"Microsoft": "Warning"
+		}
+	},
   "AllowedHosts": "*"
 }
