--- a/Tendr/appsettings.json
+++ b/Tendr/appsettings.json
@@ -1,8 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"OpenId" : {
+		"Authority": "http://idx.local:5050",
+		"ClientId": "tendr",
+		"ClientSecret": "secret"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Warning",
+			"Microsoft": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
