--- a/Tendr/appsettings.json
+++ b/Tendr/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"OpenId" : {
-		"Authority": "http://idx.local:5050",
+		"Authority": "http://idx.montr.io:5050",
 		"ClientId": "tendr",
 		"ClientSecret": "secret"
 	},
