--- a/Tendr/Tendr.csproj
+++ b/Tendr/Tendr.csproj
@@ -44,8 +44,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
-    <PackageReference Include="Sentry" Version="1.0.1-beta4" />
-    <PackageReference Include="Sentry.AspNetCore" Version="1.0.1-beta4" />
+    <PackageReference Include="Sentry" Version="1.1.0" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.1.0" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
