extracted metadata project

--- a/Tendr.Tests/Montr.Metadata.Tests.csproj
+++ b/Tendr.Tests/Montr.Metadata.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tendr\Tendr.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
   </ItemGroup>
 
 </Project>
