--- a/Tendr/Tendr.csproj
+++ b/Tendr/Tendr.csproj
@@ -50,6 +50,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
+    <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
     <ProjectReference Include="..\Montr.Web\Montr.Web.csproj" />
   </ItemGroup>
 
