--- a/Kompany/appsettings.json
+++ b/Kompany/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"OpenId": {
+		"Authority": "http://idx.montr.io:5050",
+		"ClientId": "kompany",
+		"ClientSecret": "secret"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
