--- a/Montr.Web/Montr.Web.csproj
+++ b/Montr.Web/Montr.Web.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="IdentityModel" Version="3.10.4" />
   </ItemGroup>
