--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
 		"@types/react-router": "^4.4.3",
 		"@types/react-router-dom": "^4.3.1",
 		"antd": "^3.11.6",
+		"oidc-client": "^1.6.1",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
 		"react-router-dom": "^4.3.1"
@@ -30,7 +31,7 @@
 		"style-loader": "^0.23.1",
 		"ts-import-plugin": "^1.5.5",
 		"typescript": "^3.2.2",
-		"webpack": "^4.28.2",
+		"webpack": "^4.28.3",
 		"webpack-cli": "^3.1.2"
 	}
 }
