--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
 		"@types/react-router": "^4.4.3",
 		"@types/react-router-dom": "^4.3.1",
 		"antd": "^3.11.6",
+		"axios": "^0.18.0",
 		"oidc-client": "^1.6.1",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
