--- a/Idx/Idx.csproj
+++ b/Idx/Idx.csproj
@@ -3,19 +3,25 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>aspnet-Idx-6521C15D-E645-4061-ADDD-F20EFBD5CDA1</UserSecretsId>
+    <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4" Version="2.3.2" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.3.0" />
-    <PackageReference Include="linq2db" Version="2.6.1" />
+    <PackageReference Include="linq2db" Version="2.6.2" />
     <PackageReference Include="linq2db.Identity" Version="2.0.1" />
-    <PackageReference Include="linq2db.PostgreSQL" Version="2.6.1" />
+    <PackageReference Include="linq2db.PostgreSQL" Version="2.6.2" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1" PrivateAssets="All" />
     <PackageReference Include="Npgsql" Version="4.0.4" />
-    <PackageReference Include="Sentry" Version="1.1.0" />
-    <PackageReference Include="Sentry.AspNetCore" Version="1.1.0" />
+    <PackageReference Include="Sentry" Version="1.1.1" />
+    <PackageReference Include="Sentry.AspNetCore" Version="1.1.1" />
+    <PackageReference Include="Serilog" Version="2.7.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
