--- a/Kompany/Kompany.Web.csproj
+++ b/Kompany/Kompany.Web.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="linq2db" Version="2.6.2" />
     <PackageReference Include="linq2db.PostgreSQL" Version="2.6.2" />
+    <PackageReference Include="MediatR" Version="6.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Sentry.AspNetCore" Version="1.1.2" />
@@ -20,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Kompany.Core\Kompany.csproj" />
+    <ProjectReference Include="..\Kompany.Implementation\Kompany.Implementation.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
 		<ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
 		<ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
