linked created company to current user, add initial test

--- a/Kompany.Implementation/Kompany.Implementation.csproj
+++ b/Kompany.Implementation/Kompany.Implementation.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Kompany\Kompany.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+    <ProjectReference Include="..\Montr.Data\Montr.Data.csproj" />
   </ItemGroup>
 
 </Project>
