--- a/Kompany.Tests/Kompany.Tests.csproj
+++ b/Kompany.Tests/Kompany.Tests.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
+    <PackageReference Include="Npgsql" Version="4.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kompany.Implementation\Kompany.Implementation.csproj" />
+    <ProjectReference Include="..\Kompany\Kompany.csproj" />
+  </ItemGroup>
+
 </Project>
