--- a/Montr.Core.Implementation/Montr.Core.Implementation.csproj
+++ b/Montr.Core.Implementation/Montr.Core.Implementation.csproj
@@ -5,7 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+    <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
   </ItemGroup>
 
 </Project>
