fixed app startup

--- a/Kompany.Web/Kompany.Web.csproj
+++ b/Kompany.Web/Kompany.Web.csproj
@@ -22,8 +22,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Dokumento.Implementation\Dokumento.Implementation.csproj" />
+    <ProjectReference Include="..\Dokumento\Dokumento.csproj" />
     <ProjectReference Include="..\Kompany\Kompany.csproj" />
     <ProjectReference Include="..\Kompany.Implementation\Kompany.Implementation.csproj" />
+    <ProjectReference Include="..\Montr.Core.Implementation\Montr.Core.Implementation.csproj" />
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
 		<ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
 		<ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
