--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -14,6 +14,9 @@
 		"paths": {
 			"@montr-core/*": [
 				"modules/montr-core/*"
+			],
+			"@kompany/*": [
+				"modules/kompany/*"
 			]
 		}
 	},
