--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,8 @@
 		"oidc-client": "^1.6.1",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
-		"react-router-dom": "^4.3.1"
+		"react-router-dom": "^4.3.1",
+		"universal-cookie": "^3.0.7"
 	},
 	"devDependencies": {
 		"awesome-typescript-loader": "^5.2.1",
