--- a/Dome.Web/Dome.Web.csproj
+++ b/Dome.Web/Dome.Web.csproj
@@ -63,6 +63,7 @@
     <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
     <ProjectReference Include="..\Montr.Web\Montr.Web.csproj" />
     <ProjectReference Include="..\Tendr.Implementation\Tendr.Implementation.csproj" />
+    <ProjectReference Include="..\Tendr.Web\Tendr.Web.csproj" />
     <ProjectReference Include="..\Tendr\Tendr.csproj" />
   </ItemGroup>
 
