--- a/Kompany.Implementation/Kompany.Implementation.csproj
+++ b/Kompany.Implementation/Kompany.Implementation.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="linq2db" Version="2.6.3" />
+    <PackageReference Include="linq2db" Version="2.6.4" />
     <PackageReference Include="MediatR" Version="6.0.0" />
+	<PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
