--- a/Tendr.Implementation/Tendr.Implementation.csproj
+++ b/Tendr.Implementation/Tendr.Implementation.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="MediatR" Version="6.0.0" />
   </ItemGroup>
 
