--- a/Montr.MasterData.Impl/Montr.MasterData.Impl.csproj
+++ b/Montr.MasterData.Impl/Montr.MasterData.Impl.csproj
@@ -5,13 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="linq2db" Version="2.6.4" />
     <PackageReference Include="MediatR" Version="6.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Montr.Metadata\Montr.Metadata.csproj" />
-    <ProjectReference Include="..\Montr.Web\Montr.Web.csproj" />
+    <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
+    <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+    <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
   </ItemGroup>
 
 </Project>
