--- a/Kompany.Tests/Kompany.Tests.csproj
+++ b/Kompany.Tests/Kompany.Tests.csproj
@@ -19,4 +19,10 @@
     <ProjectReference Include="..\Montr.Core.Implementation\Montr.Core.Implementation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
