--- a/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
+++ b/Montr.Data.Linq2Db/Montr.Data.Linq2Db.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="linq2db" Version="2.6.4" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
