added okpd2 & oktmo parsers, import optimization

--- a/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
+++ b/Montr.MasterData.Plugin.GovRu.Tests/Montr.MasterData.Plugin.GovRu.Tests.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Content\**" />
+    <EmbeddedResource Remove="Content\**" />
+    <None Remove="Content\**" />
+  </ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
