--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
 		"oidc-client": "^1.7.0",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
+		"react-router": "^4.4.0",
 		"react-router-dom": "^4.4.0",
 		"universal-cookie": "^3.0.7"
 	},
