--- a/Montr.MasterData.Plugin.GovRu/Montr.MasterData.Plugin.GovRu.csproj
+++ b/Montr.MasterData.Plugin.GovRu/Montr.MasterData.Plugin.GovRu.csproj
@@ -5,11 +5,18 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Montr.MasterData\Montr.MasterData.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Text.Encoding.CodePages">
+      <HintPath>..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\system.text.encoding.codepages\4.5.0\ref\netstandard2.0\System.Text.Encoding.CodePages.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
