--- a/ui/package.json
+++ b/ui/package.json
@@ -35,6 +35,7 @@
 		"ts-import-plugin": "^1.5.5",
 		"typescript": "^3.4.1",
 		"webpack": "^4.29.6",
+		"webpack-bundle-analyzer": "^3.1.0",
 		"webpack-cli": "^3.3.0"
 	}
 }
