--- a/Montr.Dokumento.Impl/Montr.Dokumento.Impl.csproj
+++ b/Montr.Dokumento.Impl/Montr.Dokumento.Impl.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dokumento\Dokumento.csproj" />
+    <ProjectReference Include="..\Montr.Dokumento\Montr.Dokumento.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
     <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
   </ItemGroup>
