--- a/Montr.Kompany.Impl/Montr.Kompany.Impl.csproj
+++ b/Montr.Kompany.Impl/Montr.Kompany.Impl.csproj
@@ -5,14 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="linq2db" Version="2.7.4" />
     <PackageReference Include="MediatR" Version="7.0.0" />
+	<PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Montr.Dokumento\Montr.Dokumento.csproj" />
+    <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
-    <ProjectReference Include="..\Tendr\Tendr.csproj" />
   </ItemGroup>
 
 </Project>
