--- a/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
+++ b/Montr.Kompany.Tests/Montr.Kompany.Tests.csproj
@@ -2,13 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-
-    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="IdentityModel" Version="3.10.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
@@ -16,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Tendr.Implementation\Tendr.Implementation.csproj" />
+    <ProjectReference Include="..\Montr.Dokumento.Impl\Montr.Dokumento.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Kompany.Impl\Montr.Kompany.Impl.csproj" />
+    <ProjectReference Include="..\Montr.Kompany\Montr.Kompany.csproj" />
+    <ProjectReference Include="..\Montr.Core.Impl\Montr.Core.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
