--- a/Montr.Tendr.Impl/Montr.Tendr.Impl.csproj
+++ b/Montr.Tendr.Impl/Montr.Tendr.Impl.csproj
@@ -5,16 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="linq2db" Version="2.7.4" />
-    <PackageReference Include="MediatR" Version="7.0.0" />
 	<PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="MediatR" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dokumento\Dokumento.csproj" />
-    <ProjectReference Include="..\Kompany\Kompany.csproj" />
     <ProjectReference Include="..\Montr.Core\Montr.Core.csproj" />
     <ProjectReference Include="..\Montr.Data.Linq2Db\Montr.Data.Linq2Db.csproj" />
+    <ProjectReference Include="..\Montr.Tendr\Montr.Tendr.csproj" />
   </ItemGroup>
 
 </Project>
