--- a/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
+++ b/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
@@ -2,10 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="IdentityModel" Version="3.10.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.1.1" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
@@ -13,10 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dokumento.Implementation\Dokumento.Implementation.csproj" />
-    <ProjectReference Include="..\Kompany.Implementation\Kompany.Implementation.csproj" />
-    <ProjectReference Include="..\Kompany\Kompany.csproj" />
-    <ProjectReference Include="..\Montr.Core.Implementation\Montr.Core.Implementation.csproj" />
+    <ProjectReference Include="..\Montr.Tendr.Impl\Montr.Tendr.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
