--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: csharp
-solution: ./src/Montr.sln
 mono: none
 dotnet: 2.2
 dist: xenial
 script:
-  - dotnet restore
-  - dotnet build
-  - dotnet test
+  - dotnet build ./src/Montr.sln
 global:
   - DOTNET_SKIP_FIRST_TIME_EXPERIENCE=true
   - DOTNET_CLI_TELEMETRY_OPTOUT=1
