--- a/src/Idx/Idx.csproj
+++ b/src/Idx/Idx.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -9,9 +9,9 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.5.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.0" />
-    <PackageReference Include="linq2db" Version="2.7.4" />
+    <PackageReference Include="linq2db" Version="2.8.1" />
     <PackageReference Include="linq2db.Identity" Version="2.0.1" />
-    <PackageReference Include="linq2db.PostgreSQL" Version="2.7.4" />
+    <PackageReference Include="linq2db.PostgreSQL" Version="2.8.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" PrivateAssets="All" />
