--- a/src/Montr.Dokumento.Impl/Montr.Dokumento.Impl.csproj
+++ b/src/Montr.Dokumento.Impl/Montr.Dokumento.Impl.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="linq2db" Version="2.7.4" />
+    <PackageReference Include="linq2db" Version="2.8.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
