--- a/src/Idx/Properties/launchSettings.json
+++ b/src/Idx/Properties/launchSettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:62188",
       "sslPort": 44334
@@ -18,10 +18,22 @@
     "Idx": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://idx.montr.io:5051;http://idx.montr.io:5050",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://idx.montr.io:5051;http://idx.montr.io:5050"
+    },
+    "Docker": {
+      "commandName": "Docker",
+      "launchBrowser": true,
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44335"
+      },
+      "httpPort": 62189,
+      "useSSL": true,
+      "sslPort": 44335
     }
   }
 }
