--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,7 @@ indent_style = tab
 insert_final_newline = true
 max_line_length = 120
 trim_trailing_whitespace = true
+
+[*.yml]
+indent_style = space
+indent_size = 2
