--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"build": "webpack",
 		"start": "react-scripts-ts start",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
