--- a/src/Host/Properties/launchSettings.json
+++ b/src/Host/Properties/launchSettings.json
@@ -23,7 +23,11 @@
       "launchUrl": "api/values",
       "applicationUrl": "http://app.tendr.montr.io:5000;https://app.tendr.montr.io:5001/",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+	    "ASPNETCORE_ENVIRONMENT": "Development",
+		"COOKIE_DOMAIN": ".montr.io",
+		"AUTHORITY_APP_URL": "http://idx.montr.io:5050",
+		"PUBLIC_APP_URL": "http://tendr.montr.io:5000",
+		"PRIVATE_APP_URL": "http://app.tendr.montr.io:5000"
       }
     }
   }
