removed extra hardcoded urls, added option to configure public origin for idx

--- a/src/Idx/appsettings.json
+++ b/src/Idx/appsettings.json
@@ -1,4 +1,11 @@
-{
+﻿{
+	"IdxServer": {
+		"PublicOrigin": "http://idx.montr.io:5050",
+		"ClientUrls": [
+			"http://tendr.montr.io:5010",
+			"http://app.tendr.montr.io:5010"
+		]
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Debug",
@@ -6,5 +13,5 @@
 			"Microsoft": "Warning"
 		}
 	},
-  "AllowedHosts": "*"
+	"AllowedHosts": "*"
 }
