--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -4,8 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "webpack --config webpack.prod.js",
 		"start": "webpack --config webpack.dev.js --watch",
+		"build-dev": "webpack --config webpack.dev.js",
+		"build-prod": "webpack --config webpack.prod.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
