--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -6,6 +6,7 @@
 		],
 		"sourceMap": true,
 		"noImplicitAny": true,
+		// "strictFunctionTypes": true,
 		// "allowSyntheticDefaultImports": true,
 		"moduleResolution": "node",
 		"module": "esnext",
