--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -10,7 +10,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "",
-	"license": "ISC",
+	"license": "GPL-3.0-or-later",
 	"private": true,
 	"dependencies": {
 		"@types/react": "^16.9.2",
