server code to insert multiple invitations

--- a/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
+++ b/src/Montr.Tendr.Tests/Montr.Tendr.Tests.csproj
@@ -16,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Montr.MasterData.Impl\Montr.MasterData.Impl.csproj" />
+    <ProjectReference Include="..\Montr.MasterData.Tests\Montr.MasterData.Tests.csproj" />
     <ProjectReference Include="..\Montr.Tendr.Impl\Montr.Tendr.Impl.csproj" />
   </ItemGroup>
 
