--- a/src/Montr.Messages/Montr.Messages.csproj
+++ b/src/Montr.Messages/Montr.Messages.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Montr.Modularity\Montr.Modularity.csproj" />
+  </ItemGroup>
+
 </Project>
