added initial RegisterUserCommandHandler

--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,5 +1,11 @@
-{
-	"OpenId" : {
+﻿{
+	"IdxServer": {
+		"PublicOrigin": "http://idx.montr.io:5050",
+		"ClientUrls": [
+			"http://app.montr.io:5010"
+		]
+	},
+	"OpenId": {
 		"Authority": "http://idx.montr.io:5050",
 		"ClientId": "tendr",
 		"ClientSecret": "secret"
