--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+	"App": {
+		"AppUrl": "http://app.montr.io:5010"
+	},
 	"IdxServer": {
 		"PublicOrigin": "http://idx.montr.io:5050",
 		"ClientUrls": [
