extracted montr-idx ui module

--- a/src/ui/tsconfig.json
+++ b/src/ui/tsconfig.json
@@ -18,6 +18,9 @@
 			"@montr-core/*": [
 				"modules/montr-core/*"
 			],
+			"@montr-idx/*": [
+				"modules/montr-idx/*"
+			],
 			"@montr-master-data/*": [
 				"modules/montr-master-data/*"
 			],
