--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -3,13 +3,13 @@
 		"AppUrl": "http://app.montr.io:5010"
 	},
 	"IdxServer": {
-		"PublicOrigin": "http://idx.montr.io:5050",
+		"PublicOrigin": "http://app.montr.io:5010",
 		"ClientUrls": [
 			"http://app.montr.io:5010"
 		]
 	},
 	"OpenId": {
-		"Authority": "http://idx.montr.io:5050",
+		"Authority": "http://app.montr.io:5010",
 		"ClientId": "tendr",
 		"ClientSecret": "secret"
 	},
